--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-data": "^1.3.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-inline-source": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-twig": "^1.2.0",
     "gulp-watch": "^5.0.1"
   }
 }
